set world z-index&click set bugs fixed

--- a/set-world/css/game.css
+++ b/set-world/css/game.css
@@ -12,6 +12,10 @@
 
 #game-start-msg {
     flex-direction: column;
+
+    /* Full size to block interaction with set board */
+    height: 100%;
+    width: 100%;
 }
 
 #score-count {
